[JDZH3-94] update: update method editclientvendor in clientvendorcontroller fixed